[gd_scene load_steps=16 format=3 uid="uid://cqelj3li8qtxi"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_u4oxs"]
[ext_resource type="Texture2D" uid="uid://yy8tg7bbsx02" path="res://kenney_top-down-shooter/PNG/Hitman 1/Black.png" id="2_btkup"]
[ext_resource type="Texture2D" uid="uid://v7xca1hwri47" path="res://kenney_top-down-shooter/PNG/Hitman 1/hitman1_gun.png" id="2_nlb2q"]
[ext_resource type="Texture2D" uid="uid://qcoe5l2a0val" path="res://kenney_top-down-shooter/PNG/Hitman 1/Black.webp" id="3_ndekd"]
[ext_resource type="Texture2D" uid="uid://cp0wbvku25aqh" path="res://kenney_top-down-shooter/PNG/Tiles/tile_316.png" id="5_mj87v"]
[ext_resource type="Texture2D" uid="uid://dud7uek3x5ay3" path="res://kenney_top-down-shooter/PNG/Tiles/tile_317.png" id="6_87xyn"]
[ext_resource type="Texture2D" uid="uid://djbm321lmxlc5" path="res://kenney_top-down-shooter/PNG/Tiles/tile_187.png" id="7_0h2gt"]
[ext_resource type="AudioStream" uid="uid://duhwnrn5cxwx4" path="res://Audio/708611__neverak__forest-night-ambience-stereo-48khz-24bit-220-owi.wav" id="8_k1kfk"]
[ext_resource type="AudioStream" uid="uid://r7dybbp2kwlk" path="res://Audio/464528__pcmac__gun_reload.wav" id="9_kjwxs"]
[ext_resource type="AudioStream" uid="uid://crs71lqybh1lh" path="res://Audio/182273__martian__gun-for-ghose.wav" id="10_u51el"]
[ext_resource type="AudioStream" uid="uid://dhpy3gusqn27x" path="res://Audio/518155__lukeo135__zombie-bite.wav" id="11_m0jd1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kbjde"]
radius = 13.0
height = 44.0

[sub_resource type="SpriteFrames" id="SpriteFrames_8g8h6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mj87v")
}],
"loop": true,
"name": &"Alive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_87xyn")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_gj3n6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mj87v")
}],
"loop": true,
"name": &"Alive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_87xyn")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xlpl7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mj87v")
}],
"loop": true,
"name": &"Alive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_87xyn")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_u4oxs")

[node name="Dark 1" type="Sprite2D" parent="."]
position = Vector2(1399, 1280)
rotation = 0.349066
scale = Vector2(2.71608, 1.12108)
texture = ExtResource("2_btkup")

[node name="Dark 2" type="Sprite2D" parent="."]
position = Vector2(1138.31, -1523.07)
rotation = -0.349066
scale = Vector2(2.48569, 1.6429)
texture = ExtResource("2_btkup")

[node name="Dark 3" type="Sprite2D" parent="."]
position = Vector2(-694, 45.9998)
scale = Vector2(1.08723, 3.57788)
texture = ExtResource("2_btkup")

[node name="Flashlight" type="Sprite2D" parent="."]
position = Vector2(-54.1899, -76.3056)
rotation = 3.14159
scale = Vector2(8.01821, 6.95674)
texture = ExtResource("3_ndekd")

[node name="Character" type="Sprite2D" parent="."]
texture = ExtResource("2_nlb2q")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-9, 0)
shape = SubResource("CapsuleShape2D_kbjde")

[node name="Camera" type="Camera2D" parent="."]

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]

[node name="Area" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-9, 0)
shape = SubResource("CapsuleShape2D_kbjde")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Sacrafice" type="Panel" parent="HUD"]
offset_left = 1151.0
offset_top = 647.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Time" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50

[node name="Fastest_Time" type="Label" parent="HUD"]
offset_top = 108.0
offset_right = 40.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 50

[node name="Ammo_Count" type="Label" parent="HUD"]
offset_left = 70.0
offset_top = 915.0
offset_right = 246.0
offset_bottom = 984.0
theme_override_font_sizes/font_size = 50

[node name="Health_1" type="AnimatedSprite2D" parent="HUD"]
position = Vector2(1784, 35)
sprite_frames = SubResource("SpriteFrames_8g8h6")
animation = &"Alive"

[node name="Health_2" type="AnimatedSprite2D" parent="HUD"]
position = Vector2(1833, 35)
sprite_frames = SubResource("SpriteFrames_gj3n6")
animation = &"Alive"

[node name="Health_3" type="AnimatedSprite2D" parent="HUD"]
position = Vector2(1883, 35)
sprite_frames = SubResource("SpriteFrames_xlpl7")
animation = &"Alive"

[node name="Ammo" type="Sprite2D" parent="HUD"]
position = Vector2(38, 950)
scale = Vector2(2.76563, 2.76563)
texture = ExtResource("7_0h2gt")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_k1kfk")
autoplay = true

[node name="Reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kjwxs")

[node name="Shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_u51el")
volume_db = -15.0

[node name="Bite" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("11_m0jd1")

[connection signal="area_entered" from="Hitbox" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_area_2d_area_exited"]
[connection signal="finished" from="BGM" to="." method="_on_bgm_finished"]
